@@ -4323,4 +4323,6 @@ a random value. /Ix
 
 "(?J:(?|(?'R')(\k'R')|((?'R'))))"
 
+/(?<=|(\,\$(?73591620449005828816)\xa8.{7}){6}\x09)/
+
 # End of testinput2 
